# telco-dataset-analysis

./: main.ipynb  main.py  pyproject.toml  report.md  report.typ
examples/: Lab_II_2026.ipynb  Lab_I_2026.ipynb  Lab_VI_2026.ipynb  Lab_V_2026.ipynb  example_flow.md  example_flow_2.md
