[project]
name = "as-telco-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "ipykernel>=7.2.0",
  "matplotlib>=3.10.9",
  "mlxtend>=0.25.0",
  "numpy>=2.4.5",
  "pandas>=3.0.3",
  "scikit-learn>=1.9.0",
  "seaborn>=0.13.2",
  "statsmodels>=0.14.6",
  "tqdm>=4.67.3",
]
